--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@ services:
     name: vkrsite
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:create_app\(\)
+    startCommand: gunicorn wsgi:app
